@@ -22,7 +22,7 @@ if RUBY_VERSION < '2.4.0'
 elsif RUBY_VERSION < '2.2.0'
   gem 'activemodel', '<5.0.0'
 else
-  gem 'activemodel', '<6.1.0'
+  gem 'activemodel'
 end
 
 if RUBY_VERSION < '2.0.0'
