@@ -25,7 +25,7 @@ describe "pg_interval extension" do
   end
 
   it "should literalize ActiveSupport::Duration instances with repeated parts correctly" do
-    if defined?(ActiveSupport::VERSION::STRING) && ActiveSupport::VERSION::STRING >= '5.1'
+    if defined?(ActiveSupport::VERSION::STRING) && ActiveSupport::VERSION::STRING >= '5.1' && ActiveSupport::VERSION::STRING < '6.1'
       @db.literal(ActiveSupport::Duration.new(0, [[:seconds, 2], [:seconds, 1]])).must_equal "'1 seconds '::interval"
       @db.literal(ActiveSupport::Duration.new(0, [[:seconds, 2], [:seconds, 1], [:days, 1], [:days, 4]])).must_equal "'4 days 1 seconds '::interval"
     else
@@ -81,7 +81,11 @@ describe "pg_interval extension" do
   end
 
   it "should support typecasting for the interval type" do
-    d = ActiveSupport::Duration.new(31557600 + 2*86400*30 + 3*86400*7 + 4*86400 + 5*3600 + 6*60 + 7, [[:years, 1], [:months, 2], [:days, 25], [:seconds, 18367]])
+    parts = {:years => 1, :months => 2, :days => 25, :seconds => 18367}
+    if defined?(ActiveSupport::VERSION::STRING) && ActiveSupport::VERSION::STRING < '5.1'
+      parts = parts.to_a
+    end
+    d = ActiveSupport::Duration.new(31557600 + 2*86400*30 + 3*86400*7 + 4*86400 + 5*3600 + 6*60 + 7, parts)
     @db.typecast_value(:interval, d).object_id.must_equal d.object_id
 
     @db.typecast_value(:interval, "1 year 2 mons 25 days 05:06:07").is_a?(ActiveSupport::Duration).must_equal true
